--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.297.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "icons": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
